# defendable-datasets

./: .env.example  .gitignore  CONTRIBUTING.md  DATASET_SCHEMA.md  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml  wrangler.toml
.github/workflows/: ci.yml
configs/: quality_rules.yaml
configs/domains/: compute.yaml  cre.yaml  finance.yaml  legal_letters.yaml  medical_letters.yaml
configs/reviewers/: hack.yaml
data/examples/: README.md
data/registry/: categories.json  datasets.json  domains.json  formats.json  licenseCompatibility.json  licenses.json  receipts.json  reviewers.json  tasks.json
datasets/: README.md
datasets/compute/compute_gpu_market_comps_v1/: dataset.card.md  manifest.json
datasets/cre/cre_underwriting_royal_jelly_v1/: dataset.card.md  (+1 more)
functions/api/: help.ts
public/: _headers
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: AccessRequestForm.tsx  AddToPackButton.tsx  CopyButton.tsx  DatasetGraphClient.tsx  GraphRouteClient.tsx  HelpAgentWidget.tsx  PackProvider.tsx  PackWorkspace.tsx  RegistryWorkspace.tsx  Shell.tsx  TipJar.tsx  ui.tsx
src/defendable_datasets/: cli.py  config.py  dedupe.py  export.py  grade.py  hash_utils.py  io.py  manifest.py  normalize.py  provenance.py  receipts.py  reports.py  reviewers.py  schemas.py  split.py  validate.py
tests/: conftest.py  test_dedupe.py  test_export.py  test_grade.py  test_hashes.py  test_manifest.py  test_reviewer.py  test_schema.py  test_split.py  test_validate.py
workers/download-gate/: README.md  wrangler.toml
(+64 files in other folders)
